kubernetes/app/jellyfin/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-ratelimit
  namespace: default
spec:
  rateLimit:
    average: 100
    burst: 50
    period: 1m
